New Features:     * Make the new targeted self-serve promotion the default       * add TheOatmeal's comic to our source.  (http://www.theoatmeal.com)       * add targetting       * add rerunning or suplementing existing campaigns       * move all sponsored link listings to be precomputed     * deputy moderation       * /about/trials and /about/modqueue       * Have trials train the spam filter       * Allow admins to see all trials, site-wide, at /r/all/about/trials       * Allow trials to be ended while votes are still coming in when the jury opinion is near-unanimous     * offload scraping to embed.ly     * Use boto for s3cp instead of forking curl
    Additions:
    * migrated all graphs to use Flot
    * Implement per-user suspiciousness quota and print over-quota trace
      * Keep track of how many questionable links a user has outstanding at any given time
    * add links to the FAQ and walkthru
    * add a differnt thumbnail for self posts (thanks to licensplate)
    * Add some visual tracking for comments trees
    * Relabel:  ban / unban => remove / approve
    * Use big remove / approve buttons when the listing relates to moderation,
      or when the item has reports or is on trial
    * Merge unban, ignore, and a new approve this non-banned link into one
    * Be a little smarter about the way we allow caching of subreddit stylesheets
    * make cassandra's cache chain cache negative results (and yes that commit message is bigger than the patch)
    * add All, friends, random, and mod to topbar
    * add a local render precache (optional)
    * better noimage.png from paradox460
    * Add a 'legacy' mode to CMemcache that will allow us to use it as a drop-in replacement for testing purposes. Modifies python-memcached to use the same 'crc' hashing algorithm that pylibmc does, and removes a feature in python-memcached that we aren't using. Contributed by Joe Terranova <joeterranova@gmail.com>
    * Everyone sees cake
    * Added g.system_user

    Bugfixe

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -390,7 +390,6 @@ ul.flat-vert {text-align: left;}
 .infotable .small { font-size: smaller; }
 .infotable td { padding-right: 1em; }
 .infotable a:hover { text-decoration: underline }
-.infotable a.pretty-button:hover { text-decoration: none }
 .infotable .state-button a {  background-color: #F0F0F0; color: gray; }
 .infotable .bold { font-weight: bold; }
 .infotable .invalid-user { background-color: pink}
@@ -476,6 +475,7 @@ ul.flat-vert {text-align: left;}
 .domain a:hover { text-decoration: underline }
 
 .link-note {
+    background-color: white;
     color: #ff4444;
     font-size:x-small;
 }
@@ -485,7 +485,7 @@ ul.flat-vert {text-align: left;}
 .tagline a {color: #369; text-decoration: none; }
 .tagline .friend    { color: orangered }
 .tagline .submitter { color: #0055df }
-.tagline .moderator { color: #228822 }
+.tagline .moderator, .green { color: #228822 }
 .tagline .admin { color: #ff0011; }
 .tagline a.author.admin { font-weight: bold }
 .tagline a:hover { text-decoration: underline }
@@ -514,7 +514,7 @@ ul.flat-vert {text-align: left;}
 .nextprev { color: gray; font-size: larger; margin-top: 10px;}
 
 /* corner help */
-.help a {
+.help a.help {
     color: #808080;
     text-decoration: underline;
 }
@@ -538,6 +538,16 @@ ul.flat-vert {text-align: left;}
 
 .help p, .help form { margin: 5px; } 
 .help form { display: inline; }
+
+.infotext { 
+    border: 1px solid #369;
+    background-color: #EFF7FF;
+}
+
+.infotext p { 
+    font-size: small;
+    margin: 5px;
+}
 
 .wikipage {
     margin: 15px;
@@ -732,6 +742,9 @@ a.star { text-decoration: none; color: #ff8b60 }
     padding-left: 4px;
 }
 
+.entry .buttons li.stamp + li.stamp {
+    margin-left: 4px;
+}
 
 .entry .buttons li a {
     color: #888;
@@ -854,6 +867,7 @@ a.star { text-decoration: none; color: #ff8b60 }
 .comment .child {
     margin-top: 10px; 
     margin-left: 15px; 
+    border-left: 1px dotted #DDF;
 }
 
 textarea.gray { color: gray; }
@@ -1807,6 +1821,7 @@ textarea.gray { color: gray; }
 }
 
 .button .blog .r { color: gray;  }
+.button .blog .score { white-space: nowrap; }
 
 .button {color: #369;}
 .button a:hover { text-decoration: underline }
@@ -2261,9 +2276,35 @@ form input[type=radio] {margin: 2px .5em 0 0; }
     text-decoration: none;
 }
 
-.reported { background-color: #f6e69f }
+.entry .buttons li.trial-stamp, .entry .buttons li.reported-stamp {
+    border: 1px solid black !important;
+    padding: 0 4px;
+    background-color: #f6e69f;
+}
+
+.entry .buttons li.trial-stamp .spam {
+    color: #e00;
+}
+
+.entry .buttons li.trial-stamp .kosher {
+    color: #090;
+}
+
 .suspicious { background-color: #f6e69f }
-.spam { background-color: #FA8072 }
+.thing.spam { background-color: #FA8072 }
+
+.comment.spam > .child, .message.spam > .child {
+    background-color: white;
+}
+.comment.spam > .child {
+    margin-left: 0;
+    padding-left: 15px;
+}
+.message.spam > .child {
+    /* There's a thin pink "border" due to the parent's padding:7px,
+       which we could try to fix here some day. */
+}
+
 .banned-user {
     overflow: hidden;
     opacity: .7;
@@ -2272,6 +2313,13 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 
 .banned-user .title {
     text-decoration: line-through;
+}
+
+.approval-checkmark {
+    cursor: pointer;
+    height: 0.8em;
+    vertical-align: baseline;
+    margin-left: 3px;
 }
 
 .little { font-size: smaller  }
@@ -2293,6 +2341,7 @@ form input[type=radio] {margin: 2px .5em 0 0; }
     float: left; 
     margin: 0px 5px; 
     overflow: hidden;
+    width: 70px; 
 }
 
 
@@ -2538,8 +2587,8 @@ ul#image-preview-list .description pre {
     border-top: 1px dotted #369;
 }
 
-#sr-bar .separator {color: gray; }
-#sr-bar a {color: black;} 
+.sr-bar .separator {color: gray; }
+.sr-bar a {color: black;} 
 
 #sr-more-link {
     color: black;
@@ -2982,6 +3031,82 @@ ul.tabmenu.formtab {
     width: 100%; 
 }
 
+.campaign { 
+    border: 1px solid #336699; 
+    background-color: #EFF7FF;
+    padding: 5px; 
+}
+
+.campaign .status { 
+    font-size: x-small;
+}
+
+.existing-campaigns > table { 
+    font-size: x-small;
+    border: 1px solid #888;
+    background-color: #F8F8F8; 
+    width: 100%;
+    margin: 10px 0; 
+}
+
+.existing-campaigns td.bid { 
+    background: transparent none no-repeat scroll center right;
+    padding-right: 15px;
+}
+
+.existing-campaigns td.bid.paid { 
+    background-image: url(/static/green-check.png);  
+}
+
+.existing-campaigns td.bid .info{ 
+    margin-right: 3px; 
+}
+
+.existing-campaigns > table > tbody > tr > td { 
+    text-align: right;
+    border: 1px solid #888;
+    padding: 1px 5px;
+}
+.existing-campaigns > table > tbody > tr#edit-campaign-tr > td { 
+    text-align: left;
+}
+
+.existing-campaigns > table > tbody > tr > th { 
+    text-align: center;
+    font-weight: bold;
+    padding: 1px 5px;
+    border: 1px solid #888;
+}
+
+.campaign ul {  
+    font-size: x-small;
+    list-style-type: disc; 
+    margin: 0 20px; 
+}
+.existing-campaigns td > button { margin: 0px 5px 0px 0px;  }
+
+.campaign { width: 95%; }
+.campaign .bid-info { font-size: x-small; }
+.campaign .buttons { float:right; }
+.campaign td.prefright { 
+    padding: 4px;
+}
+.campaign .targeting {
+    margin-left: 25px; 
+}
+.campaign .targeting input{
+    width: 95%;
+}
+
+.campaign th { 
+    font-size: small;
+    padding: 4px; 
+    padding-top: 8px;
+}
+.linefield .campaign input[type=text] { 
+    font-size: x-small; 
+}
+
 /***traffic stuff***/
 .traffic-table {margin: 10px 20px; }
 .traffic-table a:hover { text-decoration: underline; }
@@ -3007,6 +3132,10 @@ ul.tabmenu.formtab {
     border: 1px solid #B0B0B0; 
     margin-left: 10px;
     margin-bottom: 10px;
+    display: inline-block;
+}
+.traffic-graph .title { 
+    text-align: center;
 }
 
 .promoted-traffic h1 { 
@@ -3180,9 +3309,12 @@ table.lined-table {
 /* Datepicker
 ----------------------------------*/
 .datepicker {
+    z-index: 1000; 
     display: none;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
+    -moz-box-shadow: 3px 3px 3px #888;
+    -webkit-box-shadow: 3px 3px 3px #888; 
  }
 .datepicker.inuse { display: block; }
 
@@ -3325,6 +3457,22 @@ table.lined-table {
     font-weight: bold; 
 }
 
+.create-promotion .help { 
+    font-size: x-small;
+}
+
+.create-promotion .help p { 
+    margin: 5px;
+}
+
+.create-promotion .help a.help { 
+    font-weight: bold;
+    text-decoration: none;
+    float: right;
+    color: orangered;
+}
+
+
 .create-promo { float: left; width: 520px; margin-right: 20px;} 
 .create-promo .infobar { 
     margin-right: 0; 
@@ -3336,7 +3484,7 @@ table.lined-table {
 .create-promo h2 { margin-top: 10px; color: black; }
 .create-promo ol { margin: 0px 30px 10px 30px; }
 .create-promo ol > li {
-    list-style-type: disc;  margin: 
+    list-style-type: disc; 
 }
 .create-promo .rules { text-align: right; }
 
@@ -3364,8 +3512,24 @@ table.lined-table {
     font-family: courier;
 }
 
+.bidding-history table.bidding-history tr:hover { 
+    background-color: #AAA; 
+}
 
+.bidding-history table.bidding-history th,
+.bidding-history table.bidding-history td { 
+    padding: 2px 5px;
+    text-align: right;
+    font-size: x-small; 
+}
 
+.bidding-history table.bidding-history th { 
+    font-weight: bold;
+}
+.bidding-history div.graph { 
+    height: 8px;
+    background-color: #336699;
+}
 
 .pay-form tr.input-error th {
     color: red;
@@ -3624,6 +3788,11 @@ a.adminbox:hover {
     border: solid 1px orangered;
 }
 
+.email {
+    font-family: monospace;
+    font-size: larger;
+}
+
 .lined-table, .lined-table th, .lined-table td {
   border: solid #cdcdcd 1px;
   border-collapse: collapse;
@@ -3716,6 +3885,8 @@ a.adminbox:hover {
     padding-right: 5px;
 }
 
+a.pretty-button:hover { text-decoration: none !important }
+
 .pretty-button {
     margin-left: 5px;
     margin-bottom: 5px;
@@ -3807,4 +3978,9 @@ a.pretty-button.positive.pressed {
 
 .sitetable .we-need-help {
     display: none;
+}
+
+.oatmeal img { 
+    display: block;
+    margin: 5px auto; 
 }
