--- a/r2/r2/templates/linkontrial.html
+++ b/r2/r2/templates/linkontrial.html
@@ -47,6 +47,10 @@
   ${parent.entry()}
 
   <div class="jury-box">
+      <span class="how-to-classify">
+        ${_("how would you classify this link?")}
+      </span>
+
       <%
          pos_class = "positive"
          neg_class = "negative"
@@ -59,17 +63,13 @@
            neg_class += " pressed"
       %>
 
-      <span class="how-to-classify">
-        ${_("how would you classify this link?")}
-      </span>
-
       ${pretty_button(_("off-topic / spam"), "juryvote", -1, neg_class)}
       ${pretty_button(_("kosher"),           "juryvote",  1, pos_class)}
 
       <span class="thanks-for-voting">
         ${_("thanks for voting!")}
 
-        <a href="/help/juryduty">
+        <a href="/help/deputies">
           ${_("Click here for more info.").lower()}
         </a>
       </span>
